--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="cs">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Martin Trnecka</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-  <p>Martin Trnecka's GitHub web page</p>
+<body >
+    <h1>Martin Trnecka's GitHub pages</h1>
 </body>
 </html>
